--- a/Front/login1.html
+++ b/Front/login1.html
@@ -12,14 +12,14 @@
     }
     .container {
       max-width: 400px;
-      margin: 50px auto;
+      margin: 20px auto;
       background-color: #fff;
       border-radius: 8px;
       padding: 20px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      text-align: center;
     }
     h2 {
+      text-align: center;
       margin-bottom: 20px;
     }
     form {
@@ -52,32 +52,15 @@
       margin-top: 10px;
       text-align: center;
       font-weight: bold;
-      color: red;
     }
-    /* Modal styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-    }
-    .modal-content {
-      background-color: #fff;
-      margin: 15% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%;
-      max-width: 400px;
-      border-radius: 8px;
+    .links {
       text-align: center;
+      margin-top: 10px;
     }
-    .modal button {
-      margin: 10px;
+    .links a {
+      margin: 0 5px;
+      color: #007bff;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -99,35 +82,7 @@
     </div>
   </div>
 
-  <!-- Modal สำหรับถามเลือกว่าต้องการสร้างบัญชีใหม่หรือเข้าสู่ระบบ -->
-  <div id="choice-modal" class="modal">
-    <div class="modal-content">
-      <p>Do you want to create a new account?</p>
-      <button onclick="redirectToRegister()">Yes, create account</button>
-      <button onclick="closeModal()">No, proceed to login</button>
-    </div>
-  </div>
-
   <script>
-    // เปิด modal ถ้าผู้ใช้ยังไม่เคยเข้าสู่ระบบ (คุณสามารถปรับเงื่อนไขได้ตามต้องการ)
-    window.addEventListener('load', () => {
-      // ตัวอย่าง: ถ้ายังไม่มี item 'firstVisit' ใน localStorage ให้แสดง modal
-      if (!localStorage.getItem('firstVisit')) {
-        document.getElementById('choice-modal').style.display = 'block';
-      }
-    });
-
-    function redirectToRegister() {
-      localStorage.setItem('firstVisit', 'true');
-      window.location.href = 'register.html';
-    }
-
-    function closeModal() {
-      localStorage.setItem('firstVisit', 'true');
-      document.getElementById('choice-modal').style.display = 'none';
-    }
-
-    // ส่วนของฟอร์มล็อกอิน
     const baseURL = 'http://localhost:8000'; // แก้ไขตาม URL ของ Backend
 
     document.getElementById('login-form').addEventListener('submit', async (e) => {
@@ -143,14 +98,13 @@
         });
         const data = await response.json();
         if (response.ok) {
-          // ตรวจสอบว่าผู้ใช้เป็น admin หรือไม่
-          if (data.is_admin) {
-            localStorage.setItem('admin', JSON.stringify(data));
-            window.location.href = 'admin.html';
-          } else {
-            localStorage.setItem('user', JSON.stringify(data));
+          // เก็บข้อมูลผู้ใช้ใน localStorage
+          localStorage.setItem('user', JSON.stringify(data));
+          document.getElementById('login-message').textContent = 'Login successful!';
+          // ไปหน้า home
+          setTimeout(() => {
             window.location.href = 'home.html';
-          }
+          }, 1000);
         } else {
           document.getElementById('login-message').textContent = data.error || 'Login failed!';
         }
