--- a/Front/home.html
+++ b/Front/home.html
@@ -2,105 +2,125 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>Home - NetCafe</title>
+  <title>User Home</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f5f5f5; padding: 20px; text-align: center; }
-    .container { max-width: 800px; margin: 20px auto; background: #fff; border-radius: 8px; padding: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative; }
-    #notification-bar {
-      background: linear-gradient(90deg, #ff7e5f, #feb47b);
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+    }
+    .promo-bar {
+      background: linear-gradient(45deg, #ff8a00, #ff3d00);
       color: #fff;
+      text-align: center;
       padding: 10px;
-      font-size: 18px;
-      margin-bottom: 20px;
-      border-radius: 4px;
+      font-weight: bold;
     }
-    #welcome { font-size: 32px; font-weight: bold; margin-bottom: 20px; overflow: hidden; }
-    .scrolling-text { display: inline-block; white-space: nowrap; animation: scroll 10s linear infinite; }
-    @keyframes scroll {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
+    .welcome-section {
+      text-align: center;
+      margin: 20px 0;
+      font-size: 24px;
+      color: green;
+      font-weight: bold;
     }
-    .rainbow { animation: rainbow 3s infinite; }
-    @keyframes rainbow {
-      0% { color: red; }
-      16% { color: orange; }
-      33% { color: yellow; }
-      50% { color: green; }
-      66% { color: blue; }
-      83% { color: indigo; }
-      100% { color: violet; }
-    }
-    .nav {
+    .menu-container {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+      margin: 20px 0;
       flex-wrap: wrap;
-      margin-bottom: 20px;
     }
-    .nav-item { text-align: center; margin: 10px; }
-    .nav-item a { text-decoration: none; font-size: 48px; }
-    .nav-item p { margin: 5px 0 0; font-size: 16px; }
-    /* Fixed navigation buttons */
-    .top-left-button {
-      position: fixed; top: 20px; left: 20px; background: #007bff; color: #fff; padding: 10px 16px; border-radius: 4px; text-decoration: none;
+    .menu-item {
+      text-align: center;
+      width: 100px;
+      cursor: pointer;
     }
-    .bottom-right-button {
-      position: fixed; bottom: 20px; right: 20px; background: #555; color: #fff; padding: 10px 16px; border-radius: 4px; border: none; cursor: pointer;
+    .menu-item img {
+      width: 60px;
+      height: 60px;
+      object-fit: contain;
+      display: block;
+      margin: 0 auto 8px;
     }
-    .logout-button {
-      position: fixed; top: 20px; right: 20px; background: #dc3545; color: #fff; padding: 10px 16px; border-radius: 4px; border: none; cursor: pointer;
+    .menu-item span {
+      display: block;
+      font-size: 14px;
+      color: #333;
     }
   </style>
 </head>
 <body>
-  <!-- Top right Logout button -->
-  <button class="logout-button" onclick="logout()">Logout</button>
+  <!-- แถบโปรโมชั่น -->
+  <div class="promo-bar">
+    โปรโมชั่น: ยิ่งจองชั่วโมงเยอะ ยิ่งลดสูงสุด 45%!!
+  </div>
   
-  <div class="container">
-    <div id="notification-bar">โปรโมชั่น: ยิ่งจองชั่วโมงเยอะ ยิ่งลดสูงสุด 45%!!</div>
-    <div id="welcome" class="rainbow">
-      <span class="scrolling-text">Welcome, <span id="username"></span>!</span>
+  <!-- ส่วนต้อนรับ -->
+  <div class="welcome-section" id="welcome-text">
+    Welcome, user2!
+  </div>
+  
+  <!-- เมนูไอคอน -->
+  <div class="menu-container">
+    <!-- เปลี่ยน Reservation => Computer -->
+    <div class="menu-item" onclick="goToComputer()">
+      <img src="icons/reservation.png" alt="Computer Icon">
+      <span>Computer</span>
     </div>
-    <div class="nav">
-      <div class="nav-item">
-        <a href="reservation.html">🖥</a>
-        <p>Reservation</p>
-      </div>
-      <div class="nav-item">
-        <a href="order.html">🍔</a>
-        <p>Order Products</p>
-      </div>
-      <div class="nav-item">
-        <a href="cart.html">🛒</a>
-        <p>Cart</p>
-      </div>
-      <div class="nav-item">
-        <a href="sessions.html">⌛</a>
-        <p>Sessions</p>
-      </div>
-      <div class="nav-item">
-        <a href="profile.html">👤</a>
-        <p>Profile</p>
-      </div>
-      <div class="nav-item">
-        <a href="order_history.html">📜</a>
-        <p>Order History</p>
-      </div>
+    <!-- เปลี่ยน Order Products => Snack and Drink -->
+    <div class="menu-item" onclick="goToSnackAndDrink()">
+      <img src="icons/order_products.png" alt="Snack and Drink Icon">
+      <span>Snack and Drink</span>
+    </div>
+    <div class="menu-item" onclick="goToCart()">
+      <img src="icons/cart.png" alt="Cart Icon">
+      <span>Cart</span>
+    </div>
+    <div class="menu-item" onclick="goToSessions()">
+      <img src="icons/sessions.png" alt="Sessions Icon">
+      <span>Sessions</span>
+    </div>
+    <div class="menu-item" onclick="goToProfile()">
+      <img src="icons/profile.png" alt="Profile Icon">
+      <span>Profile</span>
+    </div>
+    <div class="menu-item" onclick="goToOrderHistory()">
+      <img src="icons/order_history.png" alt="Order History Icon">
+      <span>Order History</span>
     </div>
   </div>
   
-  <!-- Bottom right Back button -->
-  
-  
   <script>
-    const user = JSON.parse(localStorage.getItem('user'));
-    if (!user) { window.location.href = 'login.html'; }
-    document.getElementById('username').textContent = user.username;
-    function logout() {
-      localStorage.removeItem('user');
+    // สมมติว่ามีข้อมูล user ใน localStorage
+    const userData = JSON.parse(localStorage.getItem('user'));
+    if (!userData) {
+      // ถ้าไม่มี user ใน localStorage ให้เด้งไป login
       window.location.href = 'login.html';
+    } else {
+      // เปลี่ยนข้อความ Welcome เป็นชื่อ user
+      document.getElementById('welcome-text').textContent = `Welcome, ${userData.username}!`;
     }
-    function goBack() {
-      window.history.back();
+    
+    // ฟังก์ชันตัวอย่างสำหรับแต่ละปุ่ม (คุณสามารถปรับให้ไปหน้าอื่นหรือเรียก API ตามจริง)
+    function goToComputer() {
+      window.location.href = 'computer.html'; // หรือเรียก fetch API reservation
+    }
+    function goToSnackAndDrink() {
+      window.location.href = 'snack_drink.html'; // หรือ fetch products
+    }
+    function goToCart() {
+      window.location.href = 'cart.html';
+    }
+    function goToSessions() {
+      window.location.href = 'sessions.html';
+    }
+    function goToProfile() {
+      window.location.href = 'profile.html';
+    }
+    function goToOrderHistory() {
+      window.location.href = 'order_history.html';
     }
   </script>
 </body>
