--- a/Front/snack_drink.html
+++ b/Front/snack_drink.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>Order Products</title>
+  <title>Snack-Drink</title>
   <style>
     body { font-family: Arial, sans-serif; background-color: #f5f5f5; padding: 20px; }
     .container { max-width: 900px; margin: 20px auto; background-color: #fff; border-radius: 8px; padding: 20px; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative; }
@@ -36,7 +36,7 @@
   <a href="home.html" class="top-left-button">🏠 Home</a>
   
   <div class="container">
-    <h2>Order Products</h2>
+    <h2>Snack-Drink</h2>
     <div id="product-list"></div>
     <div id="order-message" class="toast"></div>
   </div>
@@ -61,7 +61,7 @@
         <thead>
           <tr>
             <th>ID</th>
-            <th>Product Name</th>
+            <th>Menu</th>
             <th>Price</th>
             <th>Stock</th>
             <th>Quantity</th>
