--- a/public/computer.html
+++ b/public/computer.html
@@ -96,7 +96,7 @@
   </div>
 
   <script>
-    const baseURL = 'http://localhost:8000';
+    const baseURL = 'https://netcafe-production.up.railway.app';
     const toggleAll = document.getElementById('toggle-all');
     const computerList = document.getElementById('computer-list');
     const toast = document.getElementById('reservation-message');
