--- a/public/login.html
+++ b/public/login.html
@@ -128,7 +128,7 @@
     }
 
     // ส่วนของฟอร์มล็อกอิน
-    const baseURL = 'http://localhost:8000'; // แก้ไขตาม URL ของ Backend
+    const baseURL = 'https://netcafe-production.up.railway.app'; // แก้ไขตาม URL ของ Backend
 
     document.getElementById('login-form').addEventListener('submit', async (e) => {
       e.preventDefault();
