Update baseURL in multiple HTML files to the production URL

--- a/public/admin.html
+++ b/public/admin.html
@@ -202,7 +202,7 @@
   </div>
   
   <script>
-    const baseURL = 'http://localhost:8000';
+    const baseURL = 'https://netcafe-project.proen.app.ruk-com.cloud';
     //const baseURL = 'https://netcafe-production.up.railway.app';
     // โมเดลที่ต้องใช้ admin endpoint
     const adminModels = ['users','computers','sessions','orders','orderitems','products','reservations'];
