--- a/public/login.html
+++ b/public/login.html
@@ -128,7 +128,7 @@
     }
 
     // ส่วนของฟอร์มล็อกอิน
-    const baseURL = '';
+    const baseURL = 'https://netcafe-project.proen.app.ruk-com.cloud';
     //const baseURL = 'http://localhost:8000';
     //const baseURL = 'https://netcafe-production.up.railway.app'; // แก้ไขตาม URL ของ Backend
 
