--- a/public/profile.html
+++ b/public/profile.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    const baseURL = 'http://localhost:8000';
+    const baseURL = 'https://netcafe-project.proen.app.ruk-com.cloud';
     //const baseURL = 'https://netcafe-production.up.railway.app';
     const user = JSON.parse(localStorage.getItem('user'));
     if (!user) { window.location.href = 'login.html'; }
