Remove 'last_used' field from computers form fields in admin.html

--- a/public/admin.html
+++ b/public/admin.html
@@ -221,7 +221,7 @@
     // ฟิลด์สำหรับฟอร์ม CRUD ตามโมเดล
     const formFields = {
       users: ["username", "password", "email", "phone_number", "is_admin", "is_vip"],
-      computers: ["name", "status", "last_used"],
+      computers: ["name", "status", /*"last_used"*/],
       sessions: ["start_time", "end_time", "total_price", "user_id", "computer_id"],
       orders: ["total_price", "status", "user_id"],
       // Snack and Drink => products
