Update page title in home.html to simplify branding

--- a/public/home.html
+++ b/public/home.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
-  <title>User Home (Rainbow + Emoji + Logout)</title>
+  <title>HOME</title>
   <!-- สามารถเพิ่ม icon font หรืออื่น ๆ ได้ตามต้องการ -->
 
   <style>
